package snakeandladders;

public enum Difficulty {
    EASY,
    HARD
}
